--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "url": "https://github.com/juan-bol/protractor-workshop-2018-2/issues"
   },
   "homepage": "https://github.com/juan-bol/protractor-workshop-2018-2#readme",
-  "dependencies": {},
+  "dependencies": {
+    "jasmine-spec-reporter": "^5.0.2"
+  },
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.27",
