--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "url": "https://github.com/juan-bol/protractor-workshop-2018-2/issues"
   },
   "homepage": "https://github.com/juan-bol/protractor-workshop-2018-2#readme",
-  "dependencies": {
-    "jasmine-spec-reporter": "^5.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.27",
+    "jasmine-spec-reporter": "^5.0.2",
     "protractor": "^7.0.0",
     "typescript": "^3.9.7"
   }
